web/app/themes/sleepmaker/static/src/sass/blocks/history/history-item.sass
.history-item
    width: 100%
    position: relative
    z-index: 1
    flex-shrink: 0
    +rm(1024)
        display: flex
        max-width: 50%
        & + &
            margin-top: 70px
        &:nth-child(odd)
            margin-left: auto
            padding-left: 30px
            &::before
                left: 0
                transform: translate(-50%, -5px)
            .history-item__info
                text-align: left
                padding-right: 20px
            .history-item__decor
                right: 100%
                transform: translateX(45%)
            .history-item__title
                +rm(1024)
                    max-width: 300px
        &:nth-child(even)
            flex-flow: row-reverse
            margin-right: auto
            padding-right: 30px
            &::before
                right: 0
                transform: translate(50%, -5px)
            .history-item__info
                text-align: right
                padding-left: 20px
            .history-item__decor
                left: 100%
                transform: translateX(-45%) scaleX(-1)
    +r(1024)
        padding-top: 95px
        max-width: 75%
        padding-right: 10px
        & + &
            padding-left: 30px
        &::after
            content: ''
            display: block
            width: 100%
            opacity: 0.55
            border-top: solid 1px $main
            position: absolute
            left: 0
            top: 0
    &::before
        content: ''
        display: block
        width: 25px
        height: 25px
        border: solid 1px $main
        background-color: #f5f6f9
        border-radius: 50%
        position: absolute
        top: 0
        z-index: 1
        +r(1024)
            left: 0
            transform: translateY(-50%)

    &__info
        +rm(1024)
            width: 60%
    &__image
        display: flex
        position: relative
        overflow: hidden
        +rm(1024)
            width: 40%
        +r(1024)
            position: absolute
            width: 105px
            height: 90px
            right: 10px
            top: 30px
            z-index: -1
        img
            object-fit: cover
    &__decor
        position: absolute
        z-index: 1
        width: 100px
        height: 102%
        top: -1%
        pointer-events: none
        +r(1024)
            width: 50px
            right: 100%
            transform: translateX(49%)
        &::before,
        &::after
            content: ""
            display: block
            width: 100%
            height: 60%
            position: absolute
            left: 0
            border-radius: 0 120px 0 120px
            border-bottom: 0px solid $white
            border-left: 55px solid $white
            +r(1024)
                order-radius: 0 60px 0 60px
                border-left: 25px solid $white
        &::before
            bottom: 0
        &::after
            transform: scaleY(-1)
            top: 0
    &__decor-inner
        position: absolute
        top: 0
        left: 0
        width: 90%
        height: 100%
        &::before
            content: ""
            display: block
            width: 0
            height: 0
            border-style: solid
            border-width: 40px 40px 0 0
            border-color: $white transparent transparent transparent
            position: absolute
            top: 0
            right: 0

        &::after
            content: ""
            display: block
            width: 0
            height: 0
            border-style: solid
            border-width: 40px 0 0 40px
            border-color: transparent transparent transparent $white
            position: absolute
            bottom: 0
            right: 0
    &__date
        font-family: $f1
        font-size: 30px
        font-weight: 500
        line-height: 1
        letter-spacing: 2px
        color: $main
        margin-bottom: 20px
        text-transform: uppercase
    &__title
        font-family: $f1
        font-size: 20px
        font-weight: 500
        line-height: 1
        letter-spacing: 0.43px
        color: $main
        margin-bottom: 20px
    &__text
        font-family: $f1
        font-size: 16px
        line-height: 1.25
        letter-spacing: 0.34px
        color: $main
        +rm(1024)
            max-width: 320px

